# multi-agent-safety-sim

./: .env.example  .gitignore  AGENTS.md  README.md  config.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml
configs/: phase3_7_real_model_pilot.yaml  phase3_7_run_002_real_model_pilot.yaml
data/eval_sets/: ndb_20_nested_delegation.jsonl  phase3_7_matched_trace_fixtures.jsonl  planner_delegation_golden.jsonl  reported_outcome_classifier_golden.jsonl  reported_outcome_classifier_v2_golden.jsonl  reported_outcome_classifier_v3_golden.jsonl  (+2 more)
docs/: AGENTIC_GOVERNANCE_RUBRIC.md  AGENT_CEMETERY.md  ARCHITECTURE.md  DEATH_VS_DIVERGENCE.md  EVALUATION_CRITERIA.md  GOVERNANCE_MAPPING.md  GRAVESTONE_ANALYZER.md  LESSWRONG_DRAFT.md  MEASUREMENT_GATES.md  MERGE_GATE_CEMETERY_AND_DEATH_VS_DIVERGENCE.md  MERGE_GATE_PHASE3_7_PILOT_RUNNER.md  METR_STYLE_TEST_CASES.md  NESTED_DELEGATION_BENCHMARK.md  OVERSIGHT_FAILURES_NOTE.md  PHASE3_7_CLASSIFIER_V2_PREREGISTRATION.md  PHASE3_7_CLASSIFIER_V3_ISSUE_NOTE.md  PHASE3_7_CLASSIFIER_V3_PREREGISTRATION.md  PHASE3_7_FROZEN_INPUTS.md  PHASE3_7_PILOT_RUNNER.md  PHASE3_7_REAL_MODEL_PILOT_PREREGISTRATION.md  PHASE3_7_RUN_001_CLASSIFIER_V2_DIAGNOSTIC_RESCORE.md  PHASE3_7_RUN_001_POSTRUN_AUDIT.md  PHASE3_7_RUN_002_READINESS_CHECK.md  PHASE3_7_STATUS_AFTER_RUN_001_V2_DIAGNOSTIC.md  PHASE3_STATE_REPORT_DIVERGENCE.md  PILOT_RUN_REPORT.md  PLANNER_DELEGATION_BASELINE.md  PLANNER_DELEGATION_EVALUATION_CRITERIA.md  PLANNER_DELEGATION_SPEC.md  POSTMORTEM_REJECTED_ALTERNATE_GROK_BUILD.md  PRODUCTION_MONITORING_SIMULATION.md  REPORT_INTEGRITY_POSITIONING.md  RESEARCH_BRIEF.md  RIB_16.md
notebooks/: 01_quickstart.ipynb
tests/: __init__.py  conftest.py  test_agent_cemetery.py  test_config.py  test_gravestone_analyzer.py  test_llm_agent_parsing.py  test_measurement_gates.py  test_models.py  test_ndb_20.py  test_phase3_7_classifier_v3_rescore.py  test_phase3_7_frozen_inputs.py  test_phase3_7_pilot_runner.py  test_phase3_7_run_001_v2_rescore.py  test_planner_delegation_env.py  test_planner_delegation_evaluators.py  test_planner_delegation_golden_dataset.py  test_posthumous_divergence.py  test_prisoners_dilemma_env.py  test_probes.py  test_real_llm_client.py  test_reported_outcome_classifier_calibration.py  test_rib_16.py  test_state_report_delegation_scenario.py  test_state_report_divergence_evaluation_flow.py  test_state_report_divergence_evaluators.py  test_state_report_divergence_golden_dataset.py  test_watchdog_agent.py
(+89 files in other folders)
